# python_with_docker

./: Dockerfile  docker-compose.debug.yml  docker-compose.dev.yml  memo.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
src/myapp/: hello.py
